--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxt/content": "^2.12.1"
   }
 }
